--- a/scss/main2.scss
+++ b/scss/main2.scss
@@ -245,6 +245,7 @@ header {
 
     #endSeriesPl, #endSeriesCpu {
         text-shadow: 4px 2px rebeccapurple;
+        animation: 800ms ease-in-out infinite;
     }
 }
 
