--- a/scss/main.css
+++ b/scss/main.css
@@ -1,6 +1,12 @@
 * {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
+  
+}
+
+a {
+  text-decoration: none;
+  all: unset;
 }
 
 body {
